--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.7.0",
     "bootstrap": "^5.3.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "csrf-csrf": "^4.0.3",
     "dotenv": "^16.4.7",
