Fix Portainer deployment error by removing build directive from docker-compose.yml
- Removed the `build` section from the `securescope` service definition.
- The service now relies exclusively on the `image: ghcr.io/bladestar2105/securescope:latest` directive.
- This forces Portainer and other Docker environments to pull the pre-built image instead of attempting a local build, resolving the "compose build operation failed" error reported by users.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   securescope:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/bladestar2105/securescope:latest
     container_name: securescope
     restart: unless-stopped
     ports:
