Ensure 'latest' tag generation in Docker workflow and verify image name
- Added `type=raw,value=latest,enable={{is_default_branch}}` to `.github/workflows/docker-publish.yml` to explicitly generate the `latest` tag on pushes to the default branch.
- This fixes the "manifest unknown" error for users pulling `ghcr.io/bladestar2105/securescope:latest`.
- The `docker-compose.yml` remains configured to pull this image, which will now be correctly populated by the CI pipeline.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -66,6 +67,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         id: build-and-push
