--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ CSRF_SECRET=your_random_csrf_secret_here
 # CREDENTIAL_SECRET=your_random_credential_secret_here
 # CREDENTIAL_SALT=your_random_credential_salt_here
 
+# Initial Admin Credentials (Optional - if not set, defaults to 'admin'/'admin')
+# In production, if INITIAL_ADMIN_PASSWORD is not set, a random one will be generated.
+# INITIAL_ADMIN_USERNAME=admin
+# INITIAL_ADMIN_PASSWORD=admin
+
 # Scan Configuration
 SCAN_TIMEOUT=900000
 MAX_CONCURRENT_SCANS=3
