fix: remove hardcoded admin credentials and use environment variables
- Modified config/database.js to use INITIAL_ADMIN_USERNAME and INITIAL_ADMIN_PASSWORD.
- Implemented secure random password generation in production if no password is provided.
- Updated .env.example and docker-compose.yml with new configuration options.
- Updated README.md to reflect the new initial login process.
- Added tests/admin_init.test.js to verify environment variable integration.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ NODE_ENV=production
 # CSRF Token Secret
 CSRF_SECRET=your_random_csrf_secret_here
 
+# Default Admin Credentials (used only on first start if DB is empty)
+# INITIAL_ADMIN_USERNAME=admin
+# INITIAL_ADMIN_PASSWORD=change_this_to_a_secure_password
+
 # Credential Encryption
 # CREDENTIAL_SECRET=your_random_credential_secret_here
 # CREDENTIAL_SALT=your_random_credential_salt_here
